add PWA manifest

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 }
 </script>
 <link rel="stylesheet" href="/index.css">
+<link rel="manifest" href="/galaxy-landscape-clock/manifest.webmanifest" />
+<meta name="theme-color" content="#000000" />
 </head>
 <body>
   <div id="orientation-blocker">
